--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<div>Hello Mesh</div>
+<!doctype html>
+<html  style="width: 100%; height:100%">
+
+<head>
+  <title>Mesh</title>
+</head>
+
+<body>
+  HI
+</body>
+</html>
